--- a/reze/rezervacije-frontend/src/components/Layout/Header.css
+++ b/reze/rezervacije-frontend/src/components/Layout/Header.css
@@ -1,30 +1,19 @@
-.header {
-    background-color: #333;
-    padding: 1rem;
-    text-align: center;
-  }
-  
-  .header nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .header nav ul li {
-    margin: 0 1rem;
-  }
-  
-  .header nav ul li a, .header nav ul li button {
-    color: #FFD700;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
-  .header nav ul li button {
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
-  
+header {
+  background-color: #181f18;
+  padding: 10px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+}
+
+a:hover {
+  text-decoration: underline;
+}
